<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_input"
        android:icon="@drawable/ic_nav_input"
        android:title="@string/nav_input" />
    <item
        android:id="@+id/nav_exercises"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_exercises" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_analyze"
        android:icon="@drawable/ic_nav_analyze"
        android:title="@string/nav_analyze" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
